# 51-plugins

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml
@z430/hello-world/: __init__.py  fiftyone.yml
@z430/import_snapshots/: __init__.py
@z430/panel-example/: __init__.py  fiftyone.yml
@z430/preacc/: __init__.py  fiftyone.yml  import_images.py  run_predictions.py
@z430/snapshots/: __init__.py  fiftyone.yml
